--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,25 @@
+// {
+//   "version": 2,
+//   "builds": [
+//     {
+//       "src": "backend/index.js",
+//       "use": "@vercel/node"
+//     }
+//   ],
+//   "routes": [
+//     {
+//       "src": "/(.*)",
+//       "dest": "backend/index.js"
+//     }
+//   ],
+//   "buildCommand": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend"
+// }
 {
   "version": 2,
   "builds": [
-    {
-      "src": "backend/index.js",
-      "use": "@vercel/node"
-    }
+    { "src": "server.js", "use": "@vercel/node" }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "backend/index.js"
-    }
-  ],
-  "buildCommand": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend"
+    { "src": "/(.*)", "dest": "server.js" }
+  ]
 }
